fix swagger product id param
